<resources>
    <string name="app_name">MyProjects</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_add">Add Project</string>
    <string name="menu_delete">Delete Project</string>
    <string name="menu_edit">Edit Project</string>
    <string name="title_activity_description">Description</string>

    <string name="project_author">author</string>
    <string name="project_name">name</string>
    <string name="project_link">project_link</string>
    <string name="project_description">project_description</string>
    <string name="project_create">create</string>

    <array name="descriptions">
        <item>
            The crime fighter is a mobile application that lets law enforcement personnel investigate a crime
            by pulling evidence together from multiple sources in real time. The purpose is to reduce the time
            needed to conduct an investigation and to automate the processing of standard forms as the
            investigation evolves. The application should follow one or more standard models of criminal
            investigation, but allow the investigator to explore competing hypotheses as new evidence
            emerges
        </item>
        <item>
            The memory book is a website that allows users to share their photos for an event that they all
            attended. The event could be a wedding, a college graduation, or a soccer game. The event should
            have a diversity of character roles, rich ceremony to yield a variety of plot points, and variability
            to allow users to customize a generic event type to their unique experience of the event.
        </item>
        <item>
            During the daily commute and at any given time, drivers are not headed to the same final
            destination. However, many drivers share portions of their routes with other drivers. This
            application will enable drivers to transfer control to other drivers while ensuring safety and reengaging
            drivers when necessary.
        </item>
        <item>
            This mobile health application allows users to passively and actively monitor their health-related
            choices and to communicate with doctors to help diagnose possible illnesses. The application uses
            common smart-phone features, such as location tracking and accelerometers, to categorize the
            user’s daily activity levels. It also correlates location with dining choices and prompts users to
            describe their dietary intake.
        </item>
        <item>
            This mobile application allows users to record and monitor how they use their time. The
            application tracks various types of activity, from work-related meetings to social events and
            outings. The application helps users achieve targets for increasing productivity and reducing
            stress through entertainment and social activities.
        </item>
        <item>
            This mobile application allows users to arrive at a foreign destination with limited knowledge of
            the local culture. The application enables users to quick arrange travel, find hotels and
            restaurants, and visit prominent sites for this location. The application should be simple to use
            and adaptable for different kinds of travelers.
        </item>
        <item>
            This mobile application is aimed at reducing response times to emergencies by increasing
            information sharing. Modern 911 “calls” are conducted over voice communication systems,
            whereas modern mobile phones and tablet computers include GPS, video, cameras and web
            browsers for rich, two-way multimedia exchanges. This project offers the opportunity
        </item>
        <item>
            We often find ourselves out of ingredients needed to try a new recipe. We may wonder what the
            nutritional value of the food that we are preparing is, and how we could improve our health by
            making food that meets our dietary requirements. This application is designed to provide an
            intelligent way for users not only to stock their kitchen with the necessary ingredients, but also to
            track how the food that they eat supplements their diet.
        </item>
        <item>
            Navigating unfamiliar places is challenging to the visually impaired. Just like seeing eye dogs
            help visually impaired people navigate, this application will help visually impaired users sense
            their surroundings by providing real-time information. This information may not be limited to
            verbal instructions, e.g., “the cross signal is green,” but it may help the user “sense” the depth and
            dimension of spaces, or make intuitive judgments regarding the state of travel. This application
            should utilize information from third party APIs that assist in navigation e.g., routes, street name,
            etc., which may be imperfect for this application.
        </item>
        <item>
            Transportation infrastructure must evolve to keep pace with new development and needs for
            inhabitants in a large or sprawling area. It is possible to gather vast amounts of information from
            this infrastructure, including sensors and cameras installed along roads at key points, as well as,
            vehicle and other data. This project aims to survey the possibilities of how public administration
            can leverage this data to make informed decisions.
            Simply piling on more data is not sufficient. Signals include various kinds of noise, the meaning
            of signals can vary from specific cues (e.g., accelerometers may indicate slow traffic), whereas
            other signals can have diverse interpretations (e.g., crowdsourced indicators of “objects on the
            road”). In addition to analyzing the data, various stakeholders have different needs in visualizing
            and acting upon results.
        </item>
    </array>
    <string name="title_activity_create_modify">CreateModify</string>

</resources>
