<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mg.projinder.ProjectFormActivity">

    <EditText android:id="@+id/project_form_author"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/project_author"/>

    <EditText android:id="@+id/project_form_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/project_name"
        android:layout_below="@id/project_form_author"
        android:layout_marginTop="10dp"/>

    <EditText android:id="@+id/project_form_link"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/project_link"
        android:singleLine="false"
        android:layout_below="@id/project_form_name"
        android:layout_marginTop="10dp"/>

    <EditText android:id="@+id/project_form_description"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/project_description"
        android:singleLine="false"
        android:layout_below="@id/project_form_link"
        android:layout_marginTop="10dp"/>


    <Button android:id="@+id/create"
        android:text="@string/project_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_form_description"
        android:onClick="createProjectSubmit"/>

</RelativeLayout>